@@ -436,10 +436,6 @@ static void	*__mem_realloc(zbx_mem_info_t *info, void *old, zbx_uint64_t size)
 	{
 		void	*tmp = NULL;
 
-		/* in allow_oom mode realloc failure must keep the original memory untouched */
-		if (1 == info->allow_oom)
-			return NULL;
-
 		tmp = zbx_malloc(tmp, chunk_size);
 
 		memcpy(tmp, chunk + MEM_SIZE_FIELD, chunk_size);
@@ -449,7 +445,36 @@ static void	*__mem_realloc(zbx_mem_info_t *info, void *old, zbx_uint64_t size)
 		new_chunk = __mem_malloc(info, size);
 
 		if (NULL != new_chunk)
+		{
 			memcpy(new_chunk + MEM_SIZE_FIELD, tmp, chunk_size);
+		}
+		else
+		{
+			int	index;
+			void	*last_chunk;
+
+			index = mem_bucket_by_size(chunk_size);
+			last_chunk = info->buckets[index];
+
+			mem_unlink_chunk(info, last_chunk);
+
+			if (chunk != last_chunk)
+			{
+				/* The chunk was merged with a free space on the left during  */
+				/* __mem_free() operation. The left chunk must be restored to */
+				/* its previous state to avoid memory leaks.                  */
+				/* We can safely ignore if the chunk was merged on the right  */
+				/* as it will just increase the size of allocated chunk.      */
+				zbx_uint64_t	left_size;
+
+				left_size = chunk - last_chunk - 2 * MEM_SIZE_FIELD;
+				mem_set_chunk_size(chunk, CHUNK_SIZE(chunk) - left_size - 2 * MEM_SIZE_FIELD);
+				mem_set_chunk_size(last_chunk, left_size);
+				mem_link_chunk(info, last_chunk);
+			}
+
+			memcpy(chunk + MEM_SIZE_FIELD, tmp, chunk_size);
+		}
 
 		zbx_free(tmp);
 
